(library
  (name        cohttp_lwt_unix)
  (public_name cohttp-lwt-unix)
  (synopsis    "Lwt/Unix backend for Cohttp")
  (preprocess  (pps ppx_sexp_conv))
  (libraries   fmt logs logs.lwt conduit-lwt-unix magic-mime lwt.unix cohttp
               cohttp-lwt))

(rule
 (targets test.mld)
 (deps    test.md)
 (action  (with-stdout-to %{targets} (run md2mld %{deps}))))

(documentation (package cohttp-lwt-unix))

(alias
 (name   runtest)
 (deps   (:x test.md))
 (action (progn
   (run ocaml-mdx test --direction=infer-timestamp %{x})
      (diff? %{x} %{x}.corrected)
)))

