(lang dune 1.9)
(authors "Daniel Bünzli <daniel.buenzl i@erratique.ch>")
(opam
 (package
  (name astring)
  (synopsis "Astring exposes an alternative String module for OCaml.")
  (description "This module tries to balance minimality and expressiveness for basic, index-free, string processing and provides types and functions for substrings, string sets and string maps.

  Remaining compatible with the OCaml String module is a non-goal. The String module exposed by Astring has exception safe functions, removes deprecated and rarely used functions, alters some signatures and names, adds a few missing functions and fully exploits OCaml's newfound string immutability.

  Astring depends only on the OCaml standard library. It is distributed under the ISC license.")))
